maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:10: error: reassignment to val
    etat = 1;
         ^IslandMaze:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return etat;
           ^IslandMaze:11: warning: enclosing method avanceVersNord has result type Unit: return value discarded
    return etat;
    ^IslandMaze:21: error: reassignment to val
    etat = 0;
         ^IslandMaze:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return etat;
           ^IslandMaze:22: warning: enclosing method suitAGauche has result type Unit: return value discarded
    return etat;
    ^IslandMaze:36: error: missing parameter type
      case_ => println("Ce cas ne devrait pas arriver. Corrigez le problème SVP. ");
      ^